manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revhire-user
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: revhire-user
  template:
    metadata:
      labels:
        app : revhire-user
    spec:
      containers:
        - name: revhire-user
          image: 471112742532.dkr.ecr.us-east-1.amazonaws.com/revhire-user-service-repo:latest
          
---
apiVersion: v1
kind: Service
metadata:
  name: revhire-user-service
  labels:
    app: revhire-user
spec:
  selector:
    app: revhire-user
  ports:
    - protocol: 'TCP'
      port: 8082
      targetPort: 8082
  type: LoadBalancer
